--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Egg Stream comment section",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon ./app/app.js"
   },
   "repository": {
     "type": "git",
