ping server with ostman, can access databsae

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Egg Stream comment section",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./app/app.js"
+    "server": "nodemon ./app/app.js",
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
     "express": "^4.16.4",
+    "jest": "^23.6.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "mysql": "^2.16.0",
