--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jest": "^23.6.0",
     "mongodb": "^3.1.10",
