--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "mysql": "^2.16.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "pm2": "^3.2.4"
   }
 }
